--- a/EventInClubs/src/main/resources/application.properties
+++ b/EventInClubs/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=EventInClubs
 server.port=8080
 
 # Neon Database Configuration
-spring.datasource.url=jdbc:postgresql://ep-fancy-breeze-adwxpd0b-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+spring.datasource.url=jdbc:postgresql://ep-fancy-breeze-adwxpd0b-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require&prepareThreshold=0
 spring.datasource.username=neondb_owner
 spring.datasource.password=npg_3eJSBND0XjOk
 
@@ -15,6 +15,7 @@ spring.datasource.hikari.idle-timeout=600000
 spring.datasource.hikari.max-lifetime=1800000
 
 # JPA/Hibernate Configuration
+# update = only add new columns, don't delete data
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
