--- a/EventInClubs/src/main/resources/application.properties
+++ b/EventInClubs/src/main/resources/application.properties
@@ -42,3 +42,15 @@ spring.servlet.multipart.max-request-size=10MB
 # Static Resource Configuration
 spring.web.resources.static-locations=classpath:/static/,file:uploads/
 spring.mvc.static-path-pattern=/uploads/**
+
+# Email Configuration (Gmail SMTP)
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=your-email@gmail.com
+spring.mail.password=your-app-password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
