--- a/EventInClubs/Dockerfile
+++ b/EventInClubs/Dockerfile
@@ -1,5 +1,6 @@
 # Stage 1: build the jar
-FROM maven:3.9-eclipse-temurin-17 AS build
+FROM maven:3.9-eclipse-temurin-21 AS build
+FROM eclipse-temurin:21-jdk
 WORKDIR /app
 COPY pom.xml .
 COPY src ./src
