--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,3 +1,3 @@
 VITE_GOOGLE_CLIENT_ID=31065908321-bolt6eq8313hhgbahajebnk1mtn8mjhg.apps.googleusercontent.com
-VITE_API_BASE_URL=http://localhost:8080
+VITE_API_BASE=https://event-in-clubs.onrender.com/api
 VITE_ENABLE_GOOGLE_SIGNIN=true
