fix cors issues

--- a/Frontend/.env.production
+++ b/Frontend/.env.production
@@ -1,4 +1,4 @@
 VITE_GOOGLE_CLIENT_ID=31065908321-bolt6eq8313hhgbahajebnk1mtn8mjhg.apps.googleusercontent.com
-VITE_API_BASE=https://event-in-clubs.onrender.com/api
-VITE_API_BASE_URL=https://event-in-clubs.onrender.com
+VITE_API_BASE=https://eventmanager-gt6h.onrender.com/api
+VITE_API_BASE_URL=https://eventmanager-gt6h.onrender.com
 VITE_ENABLE_GOOGLE_SIGNIN=true
